<resources>
    <string name="app_name">greenEco</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="go_to_main">Go to Main</string>
    <string name="distance_km">Distance (km): </string>
    <string name="distance_in_km">Distance in km</string>
    <string name="highway_km">Highway (km):</string>
    <string name="highway_driving_distance_in_km">Highway driving distance in km</string>
    <string name="city_km">City (km):</string>
    <string name="city_driving_distance_in_km">City driving distance in km</string>
    <string name="calculate_without_save">calculate without save</string>
    <string name="route_name">Route Name:</string>
    <string name="route_name_1">Route Name</string>
    <string name="if_choose_to_save_the_route_please_give_it_a_name">If choose to save the route, please give it a name.</string>
    <string name="save_and_calculate">save and calculate</string>
    <string name="please_select_a_route">Please select a route:</string>
    <string name="long_pressing_on_route_to_edit">Long-pressing on route to edit or delete</string>
    <string name="add_route">Add Route</string>
    <string name="please_select_a_route_to_delete">Please select a route to delete</string>
    <string name="view_footprint">View Footprint</string>
    <string name="add_journey">Add Journey</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="view_current_carbon_footprint">View Current Carbon Footprint</string>
    <string name="add_new_journey">Add New Journey</string>
    <string name="show_chart">Show Chart</string>
    <string name="show_table">Show Table</string>
    <string name="total_distance">Total distance</string>
    <string name="route_name_2">Route Name:</string>
    <string name="nickname">Nickname: </string>
    <string name="model">Model: </string>
    <string name="make">Make: </string>
    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>
    <string name="please_enter_a_nickname">Please enter a nickname</string>
    <string name="skip"><![CDATA[Skip >>]]></string>
    <string name="please_select_a_car">Please select a car:</string>
    <string name="long_pressing_on_car_to_edit_or_delete">Long-pressing on car to edit or delete</string>
    <string name="add_car">add car</string>
    <string name="please_select_your_car">Please Select Your Car</string>
    <string name="year">Year: </string>
    <string name="edit_date">Edit Date</string>
    <string name="edit_journey">Edit Journey</string>
    <string name="here_is_a_list_of_car">Here is a list of car</string>
    <string name="date_for_your_journey">Date For Your Journey</string>
    <string name="select_transpotation_mode">Select Transpotation Mode</string>
    <string name="date">Date</string>
    <string name="people"># People</string>
    <string name="add_bill">Add Bill</string>
    <string name="natural_gas_gj">Natural Gas (GJ)</string>
    <string name="TRANS_MODE">TransMode</string>
    <string name="EDIT_JOURNEY">EditJourney</string>
    <string name="EDIT_JOURNEY_ID">EditJourneyID</string>
    <string name="edit_mode_route">Edit Transportation/Route</string>
    <string name="single_day">Single Day</string>
    <string name="_28_days">28 Days</string>
    <string name="_365_days">365 Days</string>
    <string name="add">Add</string>
    <string name="info">Info</string>
    <string name="unit">Unit setting</string>
    <string name="tree">Tree Year</string>
    <string name="kg">Kg</string>
    <string name="NOTIFICATION_CONTENT_TITLE">Reduce CO2 emission together.</string>
    <string name="NOTIFICATION_NOBILL_NOJOURNEY_PART1">You have not entered any journey today,</string>
    <string name="NOTIFICATION_NOBILL_NOJOURNEY_PART2">do you want to enter one?</string>
    <string name="NOTIFICATION_NOBILL_PART1">You have not entered a utility bill in 1.5 months,</string>
    <string name="NOTIFICATION_NOBILL_PART2">do you want to enter one today?</string>
    <string name="NOTIFICATION_OTHER">Do you want to enter more journeys for today?</string>
    <string name="HIGHWEY">Highway</string>
    <string name="CITY">City</string>
    <string name="SKYTRAIN">Skytrain</string>
    <string name="BUS">Bus</string>
    <string name="WALK">Walk</string>
    <string name="BIKE">Bike</string>
    <string name="TOTAL_DISTANCE_POSITIVE">Total distance must be positive.</string>
    <string name="ENTER_ROUT_NAME">Please enter a name for the route.</string>
    <string name="CHOOSE_UNIT">Please choose CO2 unit:</string>
    <string name="UNIT_CHOICE">unitChoice</string>
    <string name="other">Other</string>
    <string name="electrical">Electrical</string>
    <string name="natural_gas">Natural Gas</string>
    <string name="total_in_month">Total In Month</string>
    <string name="average_canadian">Average CO2/Canadian</string>
    <string name="target_co2">Target CO2</string>
    <string name="utilities">Utilities</string>
    <string name="public_trans">Public Transportation</string>
    <string name="car">Car</string>
    <string name="select_icon">Select Icon</string>
    <string name="billing_cycle">Billing Cycle</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="bc_hydro_or_fortis_bc_bill">(BC Hydro or Fortis BC bill)</string>
    <string name="yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="gas_gj">Gas (GJ):</string>
    <string name="how_many_people_in_the_house">How many people in the house?</string>
    <string name="consumption">Consumption</string>
    <string name="electricity_kwh">Electricity (kWh):</string>
    <string name="electricity">Electricity (kWh)</string>
    <string name="monthly_utilities_bills">Monthly Utilities Bills</string>
    <string name="SKIP">Skip</string>
    <string name="TIP">Tip:</string>
    <string name="NEXT_TIP">Next Tip</string>
    <string name="CAR_TIP_1">Try to take the bike!</string>
    <string name="CAR_TIP_2">Try to walk!</string>
    <string name="CAR_TIP_3">Avoid areas with congested traffic!</string>
    <string name="CAR_TIP_4">Plan out your journey so you do not get lost and waste fuel!</string>
    <string name="CAR_TIP_5">Keep your vehicles well maintained!</string>
    <string name="CAR_TIP_6">Try not to accelerate unnecessarily!</string>
    <string name="CAR_TIP_7">Buy a fuel efficient car!</string>
    <string name="CAR_TIP_PART1">You have gone on</string>
    <string name="CAR_TIP_PART2">trip(s) today. And the amount of carbon emitted by your car today is:</string>
    <string name="ELE_TIP_1">Turn off your lights when you are not using it!</string>
    <string name="ELE_TIP_2">Install Compact Fluorescent Bulbs to save energy!</string>
    <string name="ELE_TIP_3">Wash your clothes with cold water!</string>
    <string name="ELE_TIP_4">Set your refrigerator to the optimal temperature!</string>
    <string name="ELE_TIP_5">Wash and dry full loads!</string>
    <string name="ELE_TIP_6">Unplug unnecessary appliances!</string>
    <string name="ELE_TIP_7">Run your dishwasher only with a full load!</string>
    <string name="ELE_TIP_PART1">According to your last bill, the amount of carbon emission by electricity daily is:</string>
    <string name="GAS_TIP_1">Insulate your house well to keep cold air out!</string>
    <string name="GAS_TIP_2">Consider to replace Any old Natural Gas Heaters!</string>
    <string name="GAS_TIP_3">Close off doors and vents in unused rooms to conserve heat within your home!</string>
    <string name="GAS_TIP_4">Upgrade your heating equipments to more energy-efficient ones!</string>
    <string name="GAS_TIP_5">Consider to install a programmable thermostat!</string>
    <string name="GAS_TIP_6">Cut your heating needs!</string>
    <string name="GAS_TIP_7">Seal air leaks with caulk!</string>
    <string name="GAS_TIP_8">Consider to replace Any old Natural Gas Heaters!</string>
    <string name="GAS_TIP_9">Take quicker showers to save some energy!</string>
    <string name="GAS_TIP_PART1">According to your last bill, the amount of carbon emission by natural gas daily is:</string>
    <string name="trips">Trips</string>
    <string name="trip">Trip</string>
    <string name="graphs">Graphs</string>
    <string name="journey">Journey</string>
    <string name="your_trips">Your Trips</string>
    <string name="JOURNEY_ID">journeyId</string>
    <string name="KeepOnTIp">Good Job, Keep On!</string>
    <string name="mode">Mode</string>
    <string name="route">Route</string>
    <string name="single_day_chart">1 Day</string>
    <string name="action_graph">Graph</string>
    <string name="select_car">Select Car</string>
    <string name="select_route">Select Route</string>
    <string name="developers_info">The app, completed in 2017, is designed to track your Carbon Footprint. By inputting the routes you have taken, the different type of transportation modes you have used, and the utilities spent, the app will calculate the total emission and provide you with tips on how to decrease your carbon footprint.</string>
<string name="string_the_app_completed_in_2017_is_designed_to_track_your_carbon_footprint_by_inputting_the_routes_you_have_taken_the_different_type_of_transportation_modes_you_have_used_and_the_utilities_spent_the_app_will_calculate_the_total_emission_and_provide_you_with_tips_on_how_to_decrease_your_carbon_footprint"/>
    <string name="about_developer">Team Peach consists of Emily Cao, Jane Gao, Steven Ho and Vu Nguyen. They are university students who are in the faculty of Software Systems and Computing Science. The app was created as a project for CMPT276.</string>
    <string name="about_app">The app, completed in 2017,  is designed to track your Carbon Footprint. By inputting the routes you have taken, the different type of transportation modes you have used, and the utilities spent, the app will calculate the total emission and provide you with tips on how to decrease your carbon footprint.</string>
    <string name="electricity_bill">electricity</string>
    <string name="end_date_bill_xml">end date</string>
    <string name="gas_bill_xml">gas</string>
    <string name="start_date_bill_xml">start date</string>
    <string name="make_xml">make</string>
    <string name="model_xml">model</string>
    <string name="name_xml">name</string>
    <string name="year_xml">year</string>
    <string name="route_name_xml">Route Name</string>
    <string name="make_listitem">make</string>
    <string name="model_listitem">model</string>
    <string name="name_listitem">name</string>
    <string name="bill_startdate">Please enter the start date of the bill</string>
    <string name="bill_enddate">Please enter the end date of the bill</string>
    <string name="bill_people">Please enter the number of people in the house</string>
    <string name="bill_consumption">Please enter the consumptions</string>
    <string name="car_nicknamecheck">Please enter a Nickname for the car.</string>
    <string name="make_nicknamecheck">Please choose make.</string>
    <string name="model_nicknamecheck">Please choose model</string>
    <string name="year_carcheck">Please choose year.</string>
    <string name="car_carcheck">Please select car.</string>
    <string name="car_trans">Car</string>
    <string name="public_transit_trans">Public Transit</string>
    <string name="bike_walk_trans">Bike / Walk</string>
    <string name="ask_to_select_trans_mode">Please Select Transportation Mode</string>
    <string name="select_your_car_caractivity">Please select your car</string>
    <string name="your_car_select">Your Car:</string>
    <string name="resources">Resources:</string>
    <string name="about">About</string>
</resources>