<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/utilities_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/billing_cycle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView14"
            android:layout_marginTop="22dp"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editEndDate"
            android:layout_alignBottom="@+id/editEndDate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:text="@string/bc_hydro_or_fortis_bc_bill"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView11"
            android:layout_alignBottom="@+id/textView11"
            android:layout_toEndOf="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:ems="10"
            android:hint="@string/yyyy_mm_dd"
            android:inputType="date"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editStartDate"
            android:layout_alignStart="@+id/editStartDate"
            android:layout_below="@+id/editStartDate"
            android:ems="10"
            android:hint="@string/yyyy_mm_dd"
            android:inputType="date"
            android:textAlignment="textStart"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView15"
            android:layout_alignStart="@+id/textView15"
            android:layout_below="@+id/textView13"
            android:layout_marginTop="92dp"
            android:text="@string/electricity_kwh" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editGas"
            android:layout_alignBottom="@+id/editGas"
            android:layout_alignEnd="@+id/textView12"
            android:layout_alignRight="@+id/textView12"
            android:text="@string/gas_gj" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editEndDate"
            android:layout_marginTop="55dp"
            android:text="@string/how_many_people_in_the_house"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPeople"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView13"
            android:layout_alignBottom="@+id/textView13"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toRightOf="@+id/textView13"
            android:ems="10"
            android:inputType="number"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editElectricity"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="9dp"
            android:text="@string/consumption"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editElectricity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView16"
            android:layout_alignBottom="@+id/textView16"
            android:layout_alignEnd="@+id/editPeople"
            android:layout_alignRight="@+id/editPeople"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toRightOf="@+id/textView16"
            android:ems="10"
            android:inputType="number"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editGas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editElectricity"
            android:layout_alignLeft="@+id/editElectricity"
            android:layout_alignRight="@+id/editElectricity"
            android:layout_alignStart="@+id/editElectricity"
            android:layout_below="@+id/editElectricity"
            android:ems="10"
            android:inputType="number"
            android:textSize="14sp" />

    </RelativeLayout>
</RelativeLayout>
