<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_route"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sfu276assg1.yancao.carbontracker.AddRouteActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_lowerEDis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/highway_km"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_higherEDis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/city_km"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editView_enterHighEDis"
                    android:layout_width="268dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="number"
                    android:textSize="14sp" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/text_enterDis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_routeDistance"
            android:layout_alignBottom="@+id/textView_routeDistance"
            android:layout_toEndOf="@+id/textView_routeDistance"
            android:layout_toRightOf="@+id/textView_routeDistance"
            android:text="@string/total_distance"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_routeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="104dp"
            android:text="@string/route_name_2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_enterRouteName"
            android:hint="@string/route_name_1"
            android:textSize="14sp"
            android:layout_alignBaseline="@+id/text_routeName"
            android:layout_alignBottom="@+id/text_routeName"
            android:layout_toRightOf="@+id/text_routeName"
            android:layout_toEndOf="@+id/text_routeName" />

        <TextView
            android:text="@string/if_choose_to_save_the_route_please_give_it_a_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_RouteSaveHint"
            android:layout_above="@+id/editText_enterRouteName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="22dp" />

        <TextView
            android:id="@+id/textView_routeDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_km"
            android:textSize="16sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/text_routeName"
            android:layout_toEndOf="@+id/text_routeName"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="126dp" />

        <EditText
            android:id="@+id/editView_enterLowEDis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView_routeDistance"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView_routeDistance"
            android:inputType="number"
            android:textSize="14sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/ok" />

</RelativeLayout>
