<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sfu276assg1.yancao.UI.SelectGraphActivity">

        <ImageView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/city"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/displaySingleDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/single_day"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/display28Days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_28_days"
            android:layout_alignBaseline="@+id/displaySingleDay"
            android:layout_alignBottom="@+id/displaySingleDay"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/display365Days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_365_days"
            android:layout_alignBaseline="@+id/display28Days"
            android:layout_alignBottom="@+id/display28Days"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="13dp"
            android:layout_marginEnd="13dp" />

        <RadioGroup
            android:id="@+id/radio_selectUnit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="11dp"
            android:layout_below="@+id/textView18"
            android:layout_alignLeft="@+id/textView18"
            android:layout_alignStart="@+id/textView18" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displaySingleDay"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="12dp"
            android:text="Please choose unit for your graph:" />

</RelativeLayout>
